<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar_register_activity" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edit_name"
                android:background="@drawable/custom_edit"
                android:padding="8dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/edit_email"
                android:background="@drawable/custom_edit"
                android:padding="8dp"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:imeOptions="actionNext"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edit_password"
                android:background="@drawable/custom_edit"
                android:padding="8dp"
                android:textAlignment="center"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edit_phone"
                android:background="@drawable/custom_edit"
                android:padding="8dp"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/phone"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="128dp"
                android:scaleType="centerCrop"
                android:layout_height="128dp"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <Button
                android:id="@+id/btn_image_profile"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/custom_btn_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image_profile" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_register_users"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textColor="@color/colorWhite"
        android:background="@drawable/custom_btn"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:text="@string/register_users" />

    <include layout="@layout/layout_progress_bar" />


</RelativeLayout>